--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <div class="card">
+        <img src="" alt="Profile Picture" srcset="">
+    </div>
 </body>
 </html>
