--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="" alt="Profile Picture" srcset="">
+        <img src="images\Fashion Police_ Minions Edition.jpeg" alt="Profile Picture" srcset="">
     </div>
 </body>
 </html>
