added social media links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="card">
         <img src="images\Fashion Police_ Minions Edition.jpeg" alt="Profile Picture" srcset="">
+        <h2>Wayne Benhura</h2>
+        <p>A student at Uncommon.org</p>
+    </div>
+    <div>
+        <a href="https://github.com/HudsonWayne/">github</a>
+        <a href="https://www.facebook.com/wayne.hudson.7528610">facebook</a>
     </div>
 </body>
 </html>
