--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Wayne Benhura</h2>
         <p>A student at Uncommon.org</p>
     </div>
-    <div>
+    <div class="links">
         <a href="https://github.com/HudsonWayne/">github</a>
         <a href="https://www.facebook.com/wayne.hudson.7528610">facebook</a>
     </div>
